feat: prettier & basic structure

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -12,7 +12,8 @@
         "eslint:recommended",
         "plugin:@typescript-eslint/recommended",
         "plugin:@angular-eslint/recommended",
-        "plugin:@angular-eslint/template/process-inline-templates"
+        "plugin:@angular-eslint/template/process-inline-templates",
+        "plugin:prettier/recommended"
       ],
       "rules": {
         "@angular-eslint/directive-selector": [
@@ -30,6 +31,14 @@
             "prefix": "app",
             "style": "kebab-case"
           }
+        ],
+        "max-len": [
+          "error",
+          {
+            "ignorePattern": "^import .*",
+            "ignoreUrls": true,
+            "code": 100
+          }
         ]
       }
     },
@@ -39,9 +48,12 @@
       ],
       "extends": [
         "plugin:@angular-eslint/template/recommended",
-        "plugin:@angular-eslint/template/accessibility"
+        "plugin:@angular-eslint/template/accessibility",
+        "plugin:prettier/recommended"
       ],
-      "rules": {}
+      "rules": {
+        "prettier/prettier": "error"
+      }
     }
   ]
 }
