--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.0.0",
     "prettier": "^2.8.8",
+    "tailwindcss": "^3.3.2",
     "typescript": "~5.0.2"
   }
 }
